--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>You might saw me jumping, climbing building, and stopping trains.But nobody pays me adime for that work.
             </p>
             <br>
-            <a class="link-button" href="">HIRE ME</a>
+            <a class="link-button" href="https://www.linkedin.com/in/md-rh-maruf-ctg-ban" target="_blank">HIRE ME</a>
         </div>
         <div id="top-image" class="half-width">
             <img src="images/peter.png" alt="">
@@ -34,7 +34,7 @@
                 industry's standard dummy text ever since the 1500s, when on unknown printer took a galley of type and
                 scrambled id to make a type</p>
             <br>
-            <a class="link-button" href="">Download CV</a>
+            <a class="link-button" href="https://www.linkedin.com/in/md-rh-maruf-ctg-ban" target="_blank">Download CV</a>
         </div>
     </section>
 
